--- a/main.css
+++ b/main.css
@@ -38,6 +38,18 @@ header.head {
 .portfolio .box-container .box:hover img {
     transform: scale(1.2);
 }
+
+.bg-about{
+    background-color: #2c3e50;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+
+}
+
+.contact{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
 /* Portfolio Section Ends */
 
 /* Contact Section Starts */
@@ -94,3 +106,11 @@ header.head {
     color: var(--color);
 }
 /* Comtact Section Ends */
+
+.sosial {
+    background-color: #2c3e50;
+    background-size: cover;
+    color: rgb(255, 255, 255);
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
